# Africa-Credit-Scoring

./: Makefile  README.md  Untitled.ipynb  pyproject.toml  requirements.txt  submission.csv
africa_loan_defaulting/: __init__.py  config.py  dataset.py  features.py  plots.py  preprocessing_util_functions.py
africa_loan_defaulting/modeling/: __init__.py  predict.py  train.py
data/: economic_indicators.csv
notebooks/: Exploratory Data Analysis.ipynb  Main.ipynb  Untitled.ipynb
