[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "africa_loan_defaulting"
version = "0.0.1"
description = "A Data Science Project to predict whether a customer will default on their loan or not based on given data. Started as part of a competition"
authors = [
  { name = "Shubham Mate" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["africa_loan_defaulting"]
force_sort_within_sections = true
